<resources>
    <string name="app_name">Map Maestro</string>

    <string name="google_maps_key_api">AIzaSyDnBRXCT6AbuI8luHSXSbOG1KAQpmGugtA</string>
    <string name="directionsApiKey">AIzaSyCEHvon1pSOw4f9Dr1drWE_pGQs7jHdlHY</string>
    <string name="firebase_url">https://map-maestro.firebaseio.com</string>

    <!--Splash screen-->
    <string name="map">Map</string>
    <string name="maestro">aestro</string>

    <!--navigation drawer-->
    <string name="nav_map">Map</string>
    <string name="nav_trip_history">Trip History</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_compass">Compass</string>
    <string name="nav_bookmark">Bookmark</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>


    <!--Login & Register -->
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_here">Already a member? Login Here</string>
    <string name="register_here">Not yet a member? Register Here</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <!--Actionbar-->
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <!--floating action button (FAB)-->
    <string name="fab_set_trip">Set Trip</string>
    <string name="fab_nearby_places">Nearby Places</string>
    <string name="fab_bookmark">Bookmark</string>

    <!--Settings -->
    <string name="title_settings">Settings</string>
    <string name="unit_types">Unit Types</string>
    <string name="units_imperial">Imperial</string>
    <string name="units_metric">Metric</string>
    <string name="settings_save">Save</string>
    <string name="voice_assistant">Voice Assistant</string>
    <string name="mode_of_transport">Mode of Transport</string>
    <string name="mot_walking">Walking</string>
    <string name="mot_driving">Driving</string>
    <string name="mot_on">On</string>
    <string name="mot_off">Off</string>
    <string name="voice_on">Voice on</string>
    <string name="voice_off">voice off</string>

    <!--Profile-->
    <string name="title_Profile">Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_surname">Surname</string>
    <string name="profile_email">Email</string>
    <string name="profile_password">Password</string>
    <string name="profile_save_button">Save</string>

    <!--Map-->
    <string name="title_map">Map</string>
    <string name="search_location">Search Location</string>
    <string name="map_type_default">Default</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_types">Map Types</string>

    <!--Set trip-->
    <string name="title_set_trip">Set Trip</string>
    <string name="set_starting_point">Starting Point</string>
    <string name="set_destination">Destination</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>

    <!--Compass-->
    <string name="title_compass">Compass</string>
    <string name="heading_degrees">Heading: 0.0</string>

    <!--Trip-->
    <string name="title_trip_history">Trip History</string>
    <string name="trip_date">Date: </string>
    <string name="trip_from">From: </string>
    <string name="trip_to">To: </string>
    <string name="trip_distance">Distance</string>
    <string name="trip_mot">Mode of Transport</string>

    <!--Bookmark-->
    <string name="title_bookmarks">Bookmarks</string>

    <!--Sign out-->
    <string name="title_sign_out">Sign out</string>


</resources>
