<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:padding="25dp"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/ivProfileLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_profile" />

    <EditText
        android:id="@+id/etProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:inputType="textCapWords|textPersonName" />

    <EditText
        android:id="@+id/etProfileSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        android:inputType="textCapWords|textPersonName" />

    <EditText
        android:id="@+id/etProfileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/etProfilePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableRight="@drawable/ic_password_hidden_black" />

    <Button
        android:id="@+id/btnProfileSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/settings_save"
        android:textSize="20sp"/>





</LinearLayout>