<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/displayMap"
        tools:context=".MapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:elevation="10dp"
        android:background="@drawable/white_border"
        android:id="@+id/relLayout1">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/ic_search"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_search"/>

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/ic_search"
            android:layout_centerVertical="true"
            android:textSize="17sp"
            android:textColor="@color/black_text"
            android:singleLine="true"
            android:id="@+id/etSearchInput"
            android:background="@null"
            android:imeOptions="actionSearch"
            android:hint="@string/search_location"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivGPS"
            android:layout_width="39dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:layout_marginTop="70dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_my_location" />

        <ImageView
            android:id="@+id/ivMapType"
            android:layout_width="39dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:layout_marginTop="125dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_map_type_2x" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvFabBookmark"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:textSize="15sp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="213dp"
        android:visibility="invisible"
        android:text="@string/fab_bookmark"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabSize="mini"
        android:layout_marginBottom="200dp"
        app:backgroundTint="@color/fab_bookmark_red"
        android:layout_marginRight="25dp"
        app:srcCompat="@drawable/fab_bookmark"
        app:pressedTranslationZ="12dp"
        android:visibility="invisible"
        android:layout_marginEnd="25dp" />

    <TextView
        android:id="@+id/tvFabNearbyPlaces"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="52dp"
        android:textSize="15sp"
        android:layout_marginBottom="163dp"
        android:visibility="invisible"
        android:text="@string/fab_nearby_places"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabNearbyPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabSize="mini"
        android:layout_marginBottom="150dp"
        app:backgroundTint="@color/fab_nearby_places_yellow"
        android:layout_marginRight="25dp"
        app:srcCompat="@drawable/fab_nearby_places"
        app:pressedTranslationZ="12dp"
        android:visibility="invisible"
        android:layout_marginEnd="25dp" />

    <TextView
        android:id="@+id/tvFabSetTrip"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:textSize="15sp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="113dp"
        android:visibility="invisible"
        android:text="@string/fab_set_trip"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSetTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabSize="mini"
        android:layout_marginBottom="100dp"
        app:backgroundTint="@color/fab_set_trip_green"
        android:layout_marginRight="25dp"
        app:srcCompat="@drawable/fab_set_trip"
        app:pressedTranslationZ="12dp"
        android:visibility="invisible"
        android:layout_marginEnd="25dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabSize="normal"
        android:clickable="true"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_fab_open"
        android:focusable="true"
        app:pressedTranslationZ="12dp"
        android:visibility="visible"/>

</FrameLayout>